Initial support for --add-reads,-opens,-exports